# yt-dvr

./: .gitignore  Dockerfile  LICENSE  README.md  openapi.yml  pyproject.toml  requirements.txt
templates/: 404.html  base.html  channel.html  channel_tile.html  channels.html  dashboard.html  index.html  platform_icon.html  search.html  settings.html  video.html  video_tile.html
ytdvr/: __init__.py  app.py  channel.py  config.py  server.py
ytdvr/channel/: __init__.py  kick.py  twitch.py  youtube.py
